# Minic

./: .gitignore  docker-compose.yml
backend/: DockerFile  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/routers/: uploads.py
backend/app/scripts/: downstream.py  manage.py  process.py
backend/config/: settings.py
frontend/: DockerFile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: Config.ts  useAxios.ts
frontend/src/api/Uploads/: index.ts
frontend/src/assets/: testdataset.json
frontend/src/components/: ButtonAppBar.tsx  Chart.tsx  StackedBarChart.ts
frontend/src/components/Background/: Background.tsx  StyledBackground.ts
frontend/src/components/CustomDropZone/: CustomDropZone.tsx  StyledDropZone.ts  index.ts
frontend/src/config/: Settings.ts
frontend/src/pages/: Home.tsx  StyledHome.ts
